# POC-Dec

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/cwq/: full_integration.yaml  full_with_improvements.yaml  gcr_only.yaml  ort_gcr.yaml  ort_only.yaml  ort_reknos.yaml  reknos_gcr.yaml  reknos_only.yaml
configs/webqsp/: full_integration.yaml  full_with_improvements.yaml  gcr_only.yaml  ort_gcr.yaml  ort_only.yaml  ort_reknos.yaml  reknos_gcr.yaml  reknos_only.yaml
scripts/: run_pipeline.py
src/: __init__.py
src/modules/: __init__.py  dataset.py  kg_interface.py  llm_interface.py  metrics.py  ontology.py  ontology_ort.py  reknos.py  sorga.py  super_relations.py  trie.py
